--- a/package.json
+++ b/package.json
@@ -16,15 +16,19 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "typeface-roboto": "^0.0.54",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "ws": "^6.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently -c green,blue npm:start:*",
+    "start:frontend": "react-scripts start",
+    "start:backend": "echo 'server!'",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "concurrently": "^3.6.1",
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.1.0"
   }
