--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
   "extends": "airbnb",
   "parser": "babel-eslint",
   "rules": {
+    "react/destructuring-assignment": 0,
     "react/forbid-prop-types": 0
   }
 }
