--- a/package.json
+++ b/package.json
@@ -5,31 +5,36 @@
   "dependencies": {
     "@material-ui/core": "^1.5.0",
     "@material-ui/icons": "^2.0.2",
-    "babel-eslint": "^8.2.6",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.1",
     "prop-types": "^15.6.2",
     "qrcode.react": "^0.8.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "redux": "^4.0.0",
+    "redux-actions": "^2.6.1",
+    "redux-thunk": "^2.3.0",
     "typeface-roboto": "^0.0.54",
     "uuid": "^3.3.2",
     "ws": "^6.0.0"
   },
   "scripts": {
-    "start": "concurrently -c green,blue npm:start:*",
+    "start": "concurrently -k -c green,blue npm:start:*",
     "start:frontend": "react-scripts start",
-    "start:backend": "echo 'server!'",
+    "start:backend": "nodemon ./wss-server.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.6",
     "concurrently": "^3.6.1",
     "eslint": "^5.3.0",
-    "eslint-config-airbnb": "^17.1.0"
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1",
+    "nodemon": "^1.18.3"
   }
 }
