--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^1.5.0",
     "@material-ui/icons": "^2.0.2",
+    "history": "^4.7.2",
     "prop-types": "^15.6.2",
     "qrcode.react": "^0.8.0",
     "react": "^16.4.2",
