--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "redux": "^4.0.0",
     "redux-actions": "^2.6.1",
     "redux-thunk": "^2.3.0",
+    "socket.io": "^2.1.1",
     "typeface-roboto": "^0.0.54",
-    "uuid": "^3.3.2",
-    "ws": "^6.0.0"
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "concurrently -k -c green,blue npm:start:*",
