--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "redux-actions": "^2.6.1",
     "redux-thunk": "^2.3.0",
     "socket.io": "^2.1.1",
+    "socket.io-client": "^2.1.1",
     "typeface-roboto": "^0.0.54",
     "uuid": "^3.3.2"
   },
