--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^1.5.0",
     "@material-ui/icons": "^2.0.2",
     "history": "^4.7.2",
+    "loglevel": "^1.6.1",
     "prop-types": "^15.6.2",
     "qrcode.react": "^0.8.0",
     "react": "^16.4.2",
