--- a/package.json
+++ b/package.json
@@ -2,42 +2,17 @@
   "name": "xchg",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@material-ui/core": "^1.5.0",
-    "@material-ui/icons": "^2.0.2",
-    "history": "^4.7.2",
-    "loglevel": "^1.6.1",
-    "prop-types": "^15.6.2",
-    "qrcode.react": "^0.8.0",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4",
-    "redux": "^4.0.0",
-    "redux-actions": "^2.6.1",
-    "redux-thunk": "^2.3.0",
-    "socket.io": "^2.1.1",
-    "socket.io-client": "^2.1.1",
-    "typeface-roboto": "^0.0.54",
-    "uuid": "^3.3.2"
-  },
   "scripts": {
     "start": "concurrently -k -c green,blue npm:start:*",
-    "start:frontend": "react-scripts start",
-    "start:backend": "nodemon ./wss-server.js",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start:frontend": "cd frontend && yarn start",
+    "start:backend": "cd server && yarn start"
   },
+  "dependencies": {},
   "devDependencies": {
-    "babel-eslint": "^8.2.6",
-    "concurrently": "^3.6.1",
-    "eslint": "^5.3.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.1",
-    "nodemon": "^1.18.3"
-  }
+    "concurrently": "^3.6.1"
+  },
+  "workspaces": [
+    "frontent",
+    "server"
+  ]
 }
